--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
 [build]
+  base = "/"
   command = "npm run build"  # This will run the build script defined in your package.json
   publish = "public"  # The directory where the built files will be output (adjust if needed)
   functions = "netlify/functions"  # If you are using serverless functions, this is the directory
 
 [context.production.environment]
   NODE_ENV = "production"
+
