--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "start": "node server.js",
-    "build": "your-build-command-here"
+    "start": "node server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
