--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "/"
-  command = "npm run build"  # This will run the build script defined in your package.json
+  command: CI= npm run build
   publish = "public"  # The directory where the built files will be output (adjust if needed)
   functions = "netlify/functions"  # If you are using serverless functions, this is the directory
 
