base directory added in .toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "/"
-  command: CI= npm run build
+  CI= npm run build
   publish = "public"  # The directory where the built files will be output (adjust if needed)
   functions = "netlify/functions"  # If you are using serverless functions, this is the directory
 
