--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "vite build"  
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
