--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,8 @@
 [build]
-  base = "/"  # The root directory of the repository (you can leave this as-is if it's at the root)
-  command = "npm run build"  # Run the build script (which is 'vite build' in your case)
-  publish = "public"  # The folder where the built static files will be generated
-  functions = "netlify/functions"  # If you're using serverless functions, specify their directory
-
-[build.environment]
-  CI = "true"  # Set the CI environment variable to enable Continuous Integration
+  base = "/"
+  CI= "npm run build"
+  publish = "public"  # The directory where the built files will be output (adjust if needed)
+  functions = "netlify/functions"  # If you are using serverless functions, this is the directory
 
 [context.production.environment]
-  NODE_ENV = "production"  # Set the environment to production for the build
-
+  NODE_ENV = "production"
