--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,7 @@
 [build]
   base = "/"
-  CI= "npm run build"
-  publish = "public"  # The directory where the built files will be output (adjust if needed)
-  functions = "netlify/functions"  # If you are using serverless functions, this is the directory
+  publish = "public"
+  command = "npm run build"
 
-[context.production.environment]
-  NODE_ENV = "production"
+[functions]
+  directory = "netlify/functions"
