--- a/netlify.toml
+++ b/netlify.toml
@@ -8,3 +8,10 @@
 
 [build.environment]
   NODE_VERSION = "18"
+
+[[headers]]
+  for = "/*"  # Apply these headers to all paths
+  [headers.values]
+    Access-Control-Allow-Origin = "https://valantinefinder.netlify.app"
+    Access-Control-Allow-Methods = "POST, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
