--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
+[[headers]]
+  for = "/*"  # Apply these headers to all paths
+  [headers.values]
+    Access-Control-Allow-Origin = "https://valantinefinder.netlify.app"
+    Access-Control-Allow-Methods = "POST, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
+
 [build]
   base = "/"
   publish = "public"
@@ -8,10 +15,3 @@
 
 [build.environment]
   NODE_VERSION = "18"
-
-[[headers]]
-  for = "/*"  # Apply these headers to all paths
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "POST, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type"
