--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-[[headers]]
-  for = "/*"  # Apply these headers to all paths
+[headers]
+  for = "/*"  
   [headers.values]
     Access-Control-Allow-Origin = "https://valantinefinder.netlify.app"
     Access-Control-Allow-Methods = "POST, OPTIONS"
