--- a/netlify.toml
+++ b/netlify.toml
@@ -16,3 +16,8 @@
     Access-Control-Allow-Origin = "https://valantinefinder.netlify.app"
     Access-Control-Allow-Methods = "POST, OPTIONS"
     Access-Control-Allow-Headers = "Content-Type"
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
