--- a/netlify.toml
+++ b/netlify.toml
@@ -18,6 +18,7 @@
     Access-Control-Allow-Headers = "Content-Type"
 
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = true
